[gd_scene load_steps=3 format=3 uid="uid://q1xbyvts1yk4"]

[ext_resource type="Script" path="res://scene/ui/Scripts/GUI/StartMenu/StartMenu.gd" id="1_rxoc4"]

[sub_resource type="LabelSettings" id="LabelSettings_imyx7"]
font_size = 72

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxoc4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_right = 108.0
offset_bottom = 99.0
grow_horizontal = 2
text = "主界面"
label_settings = SubResource("LabelSettings_imyx7")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 67.0
offset_right = 20.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
text = "设置"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.5
anchor_right = 0.502
anchor_bottom = 0.5
offset_left = -36.304
offset_top = 110.0
offset_right = 35.696
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
text = "退出游戏"

[node name="StoryModeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -55.0
offset_right = 36.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
text = "故事模式
"

[node name="WikiButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 24.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "图鉴"

[node name="ShopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.5
offset_right = 36.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "局外成长"

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="StoryModeButton" to="." method="_on_story_mode_button_pressed"]
[connection signal="pressed" from="WikiButton" to="." method="_on_wiki_button_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
